--- a/uploaded_files/main_not_minified.css
+++ b/uploaded_files/main_not_minified.css
@@ -210,10 +210,10 @@ Tooltip container */
 .tooltip {
     position: relative;
     display: inline-block;
-padding-right:25px;
-/* Image copied from https://en.wikipedia.org/wiki/File:Information_grey.svg */
+/* padding-right:25px;
+Image copied from https://en.wikipedia.org/wiki/File:Information_grey.svg
 background: #0a6531
- url("https://swimtopia.s3.amazonaws.com/77/files/Information_green.png?1461558297") no-repeat right top;
+ url("https://swimtopia.s3.amazonaws.com/77/files/Information_green.png?1461558297") no-repeat right top; */
 }
 
 /* Tooltip text */
