Updates, page script / style support.

--- a/src/nav3/nav3.scss
+++ b/src/nav3/nav3.scss
@@ -9,7 +9,7 @@
     background-color: $primary-color;
     border: none;
     border-radius: 8px;
-    color: $primary-color-text;
+    color: white;
     padding: 10px;
     text-align: center;
     text-decoration: none;
